--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #mysql数据库配置
-spring.datasource.url=jdbc:mysql://localhost:3306/boke?useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://101.200.46.91:3306/boke?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
